<resources>
    <string name="app_name">GroupUP</string>
    <string name="title_groups_overview">My Groups</string>
    <string name="title_feed">Feed</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email
        completions.
    </string>
    <string name="title_activity_login2">Sign in</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="action_signup">Sign Up</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="title_activity_profile_setup">Profile Setup</string>
    <string name="btn_upload_picture">Upload</string>
    <string name="tv_first_name">First Name:</string>
    <string name="tv_last_name">Last Name:</string>
    <string name="et_first_name">First Name</string>
    <string name="et_last_name">Last Name</string>
    <string name="add">+ Add</string>
    <string name="btn_next">Next</string>
    <string name="btn_edit">Edit</string>
    <string name="tv_tags">Tags:</string>
    <string name="tv_no_tags">You have no tags added!</string>

    <string name="create_group_title">Create Group</string>
    <string name="group_name_title">Group Name: </string>
    <string name="group_name">Enter group name</string>
    <string name="tags_title">Tags: </string>
    <string name="tags">Enter tags</string>
    <string name="add_tags">Add tags</string>
    <string name="group_status_title">Status: </string>
    <string name="group_status_public">Public</string>
    <string name="group_status_private">Private</string>
    <string name="visibility_title">Visibility: </string>
    <string name="visibility_active">Active</string>
    <string name="visibility_inactive">Inactive</string>
    <string name="location_title">Location: </string>
    <string name="location_hint">City, State, Country</string>
    <string name="create_group_submit_btn">Next</string>

    <string name="add_members_group_name_title">Group Name: </string>
    <string name="add_members_title">Add Members to this Group: </string>
    <string name="add_members_btn">ADD EMAIL ID</string>
    <string name="add_members_submit_btn">Done</string>
</resources>
