<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMembersActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5sp">

                <TextView
                    android:id="@+id/activity_add_members_group_name_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5sp"
                    android:text="@string/add_members_group_name_title"
                    android:textColor="#263238"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_add_members_group_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5sp"
                    android:padding="5sp"
                    android:textColor="#263238"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/activity_add_members_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:padding="5sp"
                android:text="@string/add_members_title"
                android:textColor="#263238"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:paddingEnd="15sp"
                tools:paddingTop="10sp" />

            <LinearLayout
                android:id="@+id/activity_add_members_add_email_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="15dp"
                tools:layout_editor_absoluteY="164dp"></LinearLayout>

            <Button
                android:id="@+id/activity_add_members_btn_add_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@null"
                android:text="@string/add_members_btn"
                android:textAllCaps="false"
                android:textSize="15sp" />

            <Button
                android:id="@+id/activity_add_members_btn_submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/add_members_submit_btn"
                android:textColor="@android:color/black" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>