<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileSetupActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ProfileSetupActivity"
        tools:showIn="@layout/activity_profile_setup">
        <ScrollView
            android:id="@+id/signup_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--<LinearLayout-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->

                    <!--android:gravity="center"-->
                    <!--android:orientation="vertical">-->

                    <!--<LinearLayout-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center"-->

                        <!--android:orientation="vertical">-->

                        <!--<ImageView-->
                            <!--android:id="@+id/action_profile_setup_iv_picture"-->
                            <!--android:layout_width="100sp"-->
                            <!--android:layout_height="100sp"-->
                            <!--android:layout_gravity="center"-->

                            <!--android:src="@android:drawable/picture_frame" />-->

                        <!--<Button-->
                            <!--android:id="@+id/sign_in_button"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_gravity="center"-->
                            <!--android:background="@null"-->
                            <!--android:text="@string/btn_upload_picture"-->
                            <!--android:textAllCaps="false"-->
                            <!--android:textSize="15sp" />-->
                    <!--</LinearLayout>-->


                <!--</LinearLayout>-->


                <TextView
                    android:id="@+id/activity_profile_setup_tv_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="7sp"
                    android:paddingTop="7sp"
                    android:paddingRight="7sp"
                    android:text="@string/tv_first_name"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/activity_profile_setup_et_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/et_first_name"
                    android:inputType="textPersonName"
                    android:paddingLeft="7sp"
                    android:paddingTop="3sp"
                    android:paddingRight="7sp"
                    android:paddingBottom="7sp" />

                <TextView
                    android:id="@+id/activity_profile_setup_tv_lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="7sp"
                    android:paddingTop="7sp"
                    android:paddingRight="7sp"
                    android:text="@string/tv_last_name"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/activity_profile_setup_et_lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/et_last_name"
                    android:inputType="textPersonName"
                    android:paddingLeft="7sp"
                    android:paddingTop="3sp"
                    android:paddingRight="7sp" />

                <TextView
                    android:id="@+id/activity_profile_setup_tv_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="7sp"
                    android:paddingTop="7sp"
                    android:paddingRight="7sp"
                    android:textSize="20sp"
                    android:text="Tags:" />

                <LinearLayout
                    android:id="@+id/activity_profile_setup_tags_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="164dp"></LinearLayout>

                <Button
                    android:id="@+id/activity_profile_setup_btn_add_tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textSize="15dp" />

                <Button
                    android:id="@+id/activity_profile_setup_btn_submit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:text="@string/btn_next"
                    android:textColor="@android:color/black" />

            </LinearLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>