<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".UserProfileActivity">

    <LinearLayout
        android:id="@+id/pot_thumbnail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/post_thumbnail"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/user_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/activity_user_profile_tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="7sp"
                android:paddingTop="7sp"
                android:paddingRight="7sp"
                android:paddingBottom="7sp"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/activity_user_profile_tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="7sp"
                android:paddingTop="7sp"
                android:paddingRight="7sp"
                android:paddingBottom="7sp"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
            <!--<View-->
                <!--android:layout_height="1sp"-->
                <!--android:layout_width="match_parent"-->
                <!--android:background="#A9A9A9" />-->
        <LinearLayout
            android:id="@+id/user_tags_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/activity_user_profile_tv_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="7sp"
                android:paddingTop="7sp"
                android:paddingRight="7sp"
                android:textSize="18sp"
                android:visibility="invisible"
                android:text="@string/tv_tags"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"/>


            <LinearLayout
                android:id="@+id/activity_user_profile_tags_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20sp"></LinearLayout>


            <TextView
                android:id="@+id/activity_user_profile_tv_no_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="7sp"
                android:paddingTop="7sp"
                android:paddingRight="7sp"
                android:text="@string/tv_no_tags"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:visibility="invisible" />
        </LinearLayout>
        <Button
            android:id="@+id/activity_user_profile_btn_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/btn_edit"
            android:textAllCaps="false"
            android:textSize="15dp" />
    </LinearLayout>
</LinearLayout>